--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hello-pangea/dnd": "^16.6.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.4",
